# wasmrs-rust

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  apex.yaml  justfile  opt.sh  rust-toolchain.toml  rustfmt.toml  schema.apexlang  wasmrs.wit
crates/embedded-msgpack/: Cargo.toml  README.md  rustfmt.toml
crates/embedded-msgpack/fuzz/fuzz_targets/: decode_from_slice.rs
crates/embedded-msgpack/src/: lib.rs  marker.rs
crates/embedded-msgpack/src/decode/: mod.rs
crates/embedded-msgpack/src/decode/serde/: enum_.rs  map.rs  mod.rs  seq.rs
crates/embedded-msgpack/src/encode/: mod.rs
crates/embedded-msgpack/src/encode/serde/: map.rs  mod.rs  seq.rs  struct_.rs
crates/embedded-msgpack/src/ext/: mod.rs  timestamp.rs
crates/embedded-msgpack/tests/: lib.rs
crates/embedded-msgpack/tests/decode/: mod.rs
crates/embedded-msgpack/tests/encode/: mod.rs
crates/embedded-msgpack/tests/fuzzing/: mod.rs
crates/embedded-msgpack/tests/roundtrip/: mod.rs
crates/wasmrs/: Cargo.toml  README.md
crates/wasmrs-codec/: Cargo.toml  README.md
crates/wasmrs-codec/src/: error.rs  lib.rs  messagepack.rs
crates/wasmrs-guest/: Cargo.toml  README.md
crates/wasmrs-guest/src/: error.rs  exports.rs  guest.rs  imports.rs  lib.rs  server.rs
crates/wasmrs-host/: Cargo.toml  README.md
crates/wasmrs-host/src/: context.rs  errors.rs  host.rs  lib.rs  protocol.rs  wasi.rs  wasmrs_functions.rs
crates/wasmrs-host/src/host/: modulestate.rs  traits.rs
crates/wasmrs-rsocket/: Cargo.toml
crates/wasmrs-rsocket/examples/: decode.rs
crates/wasmrs-rsocket/src/: bindings.rs  buffers.rs  error.rs  flux.rs  fragmentation.rs  generated.rs  lib.rs  runtime.rs  util.rs
crates/wasmrs-rsocket/src/buffers/: manager.rs
crates/wasmrs-rsocket/src/flux/: signal.rs
crates/wasmrs-rsocket/src/frames/: cancel.rs  error.rs  mod.rs  payload.rs  request_channel.rs  request_fnf.rs  request_n.rs  request_payload.rs  request_response.rs  request_stream.rs
crates/wasmrs-testhost/: Cargo.toml  README.md  replay-reqchannel.replay  replay-reqres.replay
crates/wasmrs-testhost/src/: builder.rs  engine_provider.rs  lib.rs  store.rs  wasmrs_wasmtime.rs
crates/wasmrs-testhost/tests/: replays.rs
crates/wasmrs-wasmtime/: Cargo.toml  README.md
crates/wasmrs-wasmtime/examples/: reqchannel.rs  reqres.rs  reqstream.rs  request.rs  wasmrs.rs
crates/wasmrs-wasmtime/src/: builder.rs  engine_provider.rs  errors.rs  lib.rs  memory.rs  store.rs  wasi.rs  wasmrs_wasmtime.rs
crates/wasmrs-wasmtime/tests/: request_channel.rs  request_response.rs  request_stream.rs  test_baseline.rs  test_callback.rs
crates/wasmrs/examples/: decode.rs
crates/wasmrs/src/: error.rs  flux.rs  fragmentation.rs  generated.rs  handlers.rs  lib.rs  macros.rs  manager.rs  operations.rs  record.rs  runtime.rs  safemap.rs  socket.rs  util.rs
crates/wasmrs/src/flux/: observable.rs  observer.rs  receiver.rs  signal.rs
crates/wasmrs/src/flux/ops/: pipe.rs
crates/wasmrs/src/frames/: cancel.rs  error.rs  f_cancel.rs  f_error.rs  f_payload.rs  f_request_channel.rs  f_request_fnf.rs  f_request_n.rs  f_request_response.rs  f_request_stream.rs  header.rs  metadata.rs  mod.rs  payload.rs  request_channel.rs  request_fnf.rs  request_n.rs  request_payload.rs  request_response.rs  request_stream.rs
crates/wasmrs/src/manager/: buffer.rs  responder.rs
crates/wasmrs/src/runtime/native/: mod.rs
crates/wasmrs/src/runtime/wasm/: mod.rs
crates/wasmrs/src/socket/: buffer.rs  responder.rs
rust/: .gitignore  Cargo.toml  README.md  justfile  opt.sh
rust/bins/ops/: Cargo.toml
rust/bins/ops/src/: main.rs
rust/bins/request/: Cargo.toml
rust/bins/request/src/: main.rs
rust/bins/wasmrs-replay/: Cargo.toml
rust/bins/wasmrs-replay/src/: main.rs
rust/crates/embedded-msgpack/: LICENSE-MIT
rust/crates/embedded-msgpack/fuzz/: Cargo.toml
rust/crates/embedded-msgpack/src/: lib.rs  marker.rs
rust/crates/embedded-msgpack/src/decode/: mod.rs
rust/crates/embedded-msgpack/src/encode/: mod.rs
rust/crates/embedded-msgpack/src/ext/: mod.rs  timestamp.rs
rust/crates/embedded-msgpack/tests/decode/: mod.rs
rust/crates/embedded-msgpack/tests/fuzzing/: mod.rs
rust/crates/embedded-msgpack/tests/roundtrip/: mod.rs
rust/crates/wasmrs/: Cargo.toml  README.md
rust/crates/wasmrs-codec/: Cargo.toml  README.md
rust/crates/wasmrs-codec/src/: error.rs  lib.rs  messagepack.rs
rust/crates/wasmrs-frames/: Cargo.toml  README.md
rust/crates/wasmrs-frames/src/: error.rs  lib.rs
rust/crates/wasmrs-frames/src/frames/: f_cancel.rs  f_error.rs  f_payload.rs  f_request_channel.rs  f_request_fnf.rs  f_request_n.rs  f_request_response.rs  f_request_stream.rs  mod.rs  request_payload.rs
rust/crates/wasmrs-guest/: Cargo.toml  README.md
rust/crates/wasmrs-guest/src/: error.rs  exports.rs  guest.rs  lib.rs  server.rs
rust/crates/wasmrs-host/: Cargo.toml  README.md
rust/crates/wasmrs-host/src/: errors.rs  host.rs  lib.rs
rust/crates/wasmrs-runtime/: Cargo.toml
rust/crates/wasmrs-runtime/src/: lib.rs  macros.rs
rust/crates/wasmrs-rx/: Cargo.toml  README.md
rust/crates/wasmrs-rx/src/: error.rs  flux.rs  lib.rs
rust/crates/wasmrs-rx/src/flux/: receiver.rs  signal.rs
rust/crates/wasmrs-testhost/: Cargo.toml  README.md
rust/crates/wasmrs-testhost/src/: errors.rs
rust/crates/wasmrs-wasmtime/: Cargo.toml
rust/crates/wasmrs-wasmtime/src/: builder.rs  lib.rs  wasmrs_wasmtime.rs
rust/crates/wasmrs-wasmtime/tests/: request.rs  request_channel.rs  request_response.rs  request_stream.rs
rust/crates/wasmrs/src/: error.rs  flux.rs  generated.rs  lib.rs  operations.rs  record.rs  runtime.rs  socket.rs
rust/crates/wasmrs/src/flux/: observable.rs  (+2 more)
rust/wasm/baseline/: justfile
rust/wasm/baseline/src/: lib.rs
rust/wasm/grabbag/: Cargo.toml  apex.axdl  justfile
rust/wasm/grabbag/src/: error.rs  lib.rs
rust/wasm/reqres-component/: Cargo.toml  apex.axdl  apex.yaml  justfile
rust/wasm/reqres-component/src/: error.rs  lib.rs
wasm/wasmrs-component/: Cargo.toml  justfile
wasm/wasmrs-component/src/: generated.rs  guest.rs  lib.rs  macros.rs
(+219 files in other folders)
