[workspace]
members = [
  "crates/wasmrs-testhost",
  "crates/wasmrs-frames",
  "crates/wasmrs-codec",
  "crates/wasmrs",
  "crates/wasmrs-runtime",
  "crates/wasmrs-guest",
  "crates/wasmrs-rx",
  "crates/wasmrs-host",
  "crates/wasmrs-wasmtime",
  "bins/*"
]
exclude = ["wasm/reqres-component", "wasm/baseline"]

[workspace.dependencies]
env_logger = "0.10.0"
futures = "0.3"
futures-core = "0.3"
futures-executor = "0.3"
futures-util = "0.3"
serde = "1"
bytes = "1.2"
tokio = "1"
async-trait = "0.1"
parking_lot = "0.12"
tracing = "0.1"
thiserror = "1.0"
anyhow = "1.0"
