[package]
name = "embedded-msgpack"
description = "MessagePack serialization implementation for Rust optimized for embedded/no_std environments"
version = "0.2.2"
repository = "https://github.com/Sympatron/embedded-msgpack"
documentation = "https://docs.rs/embedded-msgpack"
readme = "./README.md"
license = "MIT OR Apache-2.0"
authors = ["Karsten Große"]
keywords = ["no_std", "msgpack", "messagepack", "serde"]
categories = ["no-std", "embedded"]
edition = "2018"

[package.metadata.docs.rs]
features = ["compliant"]

[dependencies]
num-traits = { version = "0.2", default-features = false }
byteorder = { version = "1", default-features = false }
zerocopy = { version = "0.5", default-features = false }
serde = { version = "1.0", default-features = false, optional = true, features = ["derive"] }
serde_bytes = { version = "0.11", default-features = false, optional = true }
paste = "1.0"
heapless = { version = "0.7", default-features = false, optional = true }

[dev-dependencies]
serde_repr = { version = "0.1", default-features = false }

[features]
default = [
    "u64",
    "i64",
    "bin16",
    "timestamp",
    "serde",
    "serde_bytes",
    "ext8",
]
std = ["byteorder/std", "num-traits/std", "serde_bytes/std", "serde/std"]
alloc = ["serde/alloc", "serde_bytes/alloc"]
u64 = []
i64 = []
bin16 = []
bin32 = ["bin16"]
map32 = []
array16 = []
array32 = ["array16"]
str16 = []
str32 = ["str16"]
ext = []
fixext = ["ext"]
ext8 = ["ext"]
ext16 = ["ext"]
ext32 = ["ext"]
timestamp = ["ext"]
timestamp96 = ["timestamp", "ext8"]
compliant = [
    "i64",
    "u64",
    "bin32",
    "map32",
    "array32",
    "str32",
    "ext",
    "fixext",
    "ext8",
    "ext16",
    "ext32",
    "timestamp",
    "timestamp96",
]
"custom-error-messages" = ["heapless"]
