[package]
name = "wasmrs-codec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ['std']
std = ['embedded-msgpack/std', 'serde/std']

[dependencies]
embedded-msgpack = { path = "../embedded-msgpack", version = "0.2.2", features = [
  "alloc",
  "custom-error-messages",
] }
serde = { version = "1", features = [
  "derive",
  "alloc",
], default-features = false }
