[package]
name = "wasmrs-codec"
version = "0.14.0"
edition = "2021"
description = "MessagePack Codec implementation used by wasmRS modules"
license = "Apache-2.0"
repository = "https://github.com/wasmrs/wasmrs-rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
std = ["serde/std"]

[dependencies]
wasmrs-frames = { path = "../wasmrs-frames", version = "0.14.0" }
rmp-serde = "1.1"
serde = { version = "1", features = [], default-features = false }
heapless = "0.7"

[dev-dependencies]
bytes = { version = "1.1", features = ["serde"] }
serde_json = { version = "1.0" }
