[package]
name = "wasmrs-guest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmrs-codec = { path = "../../crates/wasmrs-codec" }
wasmrs = { path = "../../crates/wasmrs" }
bytes = { version = "1.2", default-features = false }

futures-executor = { version = "0.3", default-features = false, features = [
  "std",
] }
futures-util = { version = "0.3", default-features = false, features = [
  "alloc",
] }
serde = { version = "1", features = [
  "derive",
  "alloc",
], default-features = false }
