[package]
name = "wasmrs-host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmrs-rsocket = { path = "../wasmrs-rsocket" }
parking_lot = "0.12"
thiserror = "1.0"
futures-core = "0.3"
tokio = { version = "1", features = ["sync", "rt-multi-thread"] }
strum = { version = "0.24", features = ["derive"] }
tracing = "0.1"
# rsocket_rust = "0.7.2"
async-trait = "0.1.57"
bytes = "1.2.1"
dashmap = "5.4"

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
anyhow = { version = "1.0" }
