[package]
name = "wasmrs-rsocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmrs-ringbuffer = { path = "../wasmrs-ringbuffer" }
async-trait = "0.1.57"
futures-lite = "1.12.0"
bytes = "1.2.1"
tokio = { version = "1", features = ["rt", "sync"] }
parking_lot = "0.12"

[dev-dependencies]
anyhow = { version = "1.0" }
tokio = { version = "1", features = ["macros"] }
