[package]
name = "wasmrs-wasmtime"
version = "0.14.1"
edition = "2021"
license = "Apache-2.0"
description = "Wasmtime engine for wasmRS hosts"
repository = "https://github.com/wasmrs/wasmrs-rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
profiler = []

[dependencies]
wasmrs-host = { path = "../wasmrs-host", version = "0.14.0" }
wasmrs = { path = "../wasmrs", version = "0.14.0" }
tracing = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync"] }
bytes = { workspace = true }
futures = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true, features = ["sync"] }
wasi-common = { workspace = true }
cfg-if = { workspace = true }
anyhow = { workspace = true }
once_cell = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
wasmrs-rx = { path = "../wasmrs-rx", version = "0.14.0" }
wasmrs-codec = { path = "../wasmrs-codec", version = "0.14.0", features = [] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
test-log = { workspace = true }
serde = { workspace = true }
clap = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
