[package]
name = "wasmrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmrs-ringbuffer = { path = "../wasmrs-ringbuffer" }
futures-core = "0.3"
bytes = "1.2"
tokio = { version = "1", features = ["sync"] }
parking_lot = "0.12"

[target.'cfg(not(target_family = "wasm"))'.dependencies.tokio]
version = "1"
features = ["rt"]

[dev-dependencies]
anyhow = { version = "1.0" }
tokio = { version = "1", features = ["rt", "macros"] }
futures = "0.3"
tokio-stream = "0.1.10"
