[package]
name = "wasmrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmrs-ringbuffer = { path = "../wasmrs-ringbuffer" }
futures-core = { version = "0.3", default-features = false }
bytes = { version = "1.2", default-features = false }
tokio = { version = "1", features = ["sync"], default-features = false }
parking_lot = { version = "0.12", default-features = false }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { version = "1", features = ["rt"] }
dashmap = "5.4"

[target.'cfg(target_family = "wasm")'.dependencies]
crossbeam-channel = { version = "0.5" }


[dev-dependencies]
anyhow = { version = "1.0" }
tokio = { version = "1", features = ["rt", "macros"] }
futures = "0.3"
tokio-stream = "0.1.10"
