[package]
name = "wasmrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmrs-codec = { path = "../wasmrs-codec" }
futures = { version = "0.3", default-features = false }
bytes = { version = "1.2", default-features = false }
tokio = { version = "1", features = ["sync"], default-features = false }
parking_lot = { version = "0.12", default-features = false }
async-trait = "0.1.57"
pin-project-lite = "0.2"
tracing = { version = "0.1", features = ["release_max_level_off"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { version = "1", features = ["rt"] }
dashmap = "5.4"

[target.'cfg(target_family = "wasm")'.dependencies]
crossbeam-channel = { version = "0.5" }
futures-executor = { version = "0.3", default-features = false, features = [
  "std",
] }
futures-util = { version = "0.3", default-features = false, features = [
  "alloc",
] }

[dev-dependencies]
anyhow = { version = "1.0" }
tokio = { version = "1", features = ["rt", "time", "macros"] }
futures = "0.3"
tokio-stream = "0.1.10"


env_logger = "0.9.1"
test-log = "0.2.11"
