[package]
name = "wasmrs-component"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "z"

[lib]
crate-type = ["cdylib"]

[dependencies]
# wasmrs = { path = "../../crates/wasmrs" }
wasmrs-ringbuffer = { path = "../../crates/wasmrs-ringbuffer" }
wasmrs-rsocket = { path = "../../crates/wasmrs-rsocket" }
rxrust = { path = "../../crates/rxRust", features = [
  "wasm-yielding-scheduler",
], default-features = false }
bytes = "1.2"

async-channel = "1.7"
tokio = { version = "1", features = ["sync"] }
yielding-executor = { version = "0.10" }
serde = { version = "1", features = ["derive"] }
async-trait = "0.1"
wasmflow-codec = "0.10.0"
