[package]
name = "wasmrs-component"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "z"
panic = "abort"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasmrs-ringbuffer = { path = "../../crates/wasmrs-ringbuffer" }
wasmrs-rsocket = { path = "../../crates/wasmrs-rsocket" }
bytes = "1.2"
futures-lite = "1.12.0"
futures = "0.3"
async-channel = "1.7"

yielding-executor = { version = "0.10" }
serde = { version = "1", features = ["derive"] }
wasmflow-codec = "0.10.0"
