[package]
name = "wasmrs-component"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
strip = "symbols"
codegen-units = 1
debug = false
lto = true
opt-level = "z"
panic = "abort"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasmrs-codec = { path = "../../crates/wasmrs-codec" }
wasmrs-ringbuffer = { path = "../../crates/wasmrs-ringbuffer" }
wasmrs = { path = "../../crates/wasmrs" }
bytes = { version = "1.2", default-features = false }

futures-executor = { version = "0.3", default-features = false, features = [
  "std",
] }
futures-util = { version = "0.3", default-features = false, features = [
  "alloc",
] }
serde = { version = "1", features = [
  "derive",
  "alloc",
], default-features = false }
