[package]
name = "wasmrs-ops"
version = "0.2.0"
edition = "2021"
description = "Print wasmRS operations from a .wasm file."
license = "Apache-2.0"
repository = "https://github.com/nanobus/iota"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
wasmrs = { path = "../../crates/wasmrs", version = "0.3.0" }
wasmrs-codec = { path = "../../crates/wasmrs-codec", version = "0.3.0" }
wasmrs-wasmtime = { path = "../../crates/wasmrs-wasmtime", version = "0.3.0" }
wasmrs-host = { path = "../../crates/wasmrs-host", version = "0.3.0" }
env_logger = { workspace = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
futures = { workspace = true }
anyhow = { version = "1.0" }
clap = { version = "4.0.9", features = ["derive"] }
