[package]
name = "request"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmrs = { path = "../../crates/wasmrs" }
wasmrs-codec = { path = "../../crates/wasmrs-codec" }
wasmrs-wasmtime = { path = "../../crates/wasmrs-wasmtime" }
wasmrs-host = { path = "../../crates/wasmrs-host" }
env_logger = "0.9"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
test-log = "0.2.10"
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "env-filter",
  "fmt",
] }
futures = "0.3"
anyhow = { version = "1.0" }
clap = { version = "4.0.9", features = ["derive"] }
serde_json = "1.0.85"
