[package]
name = "request"
version = "0.1.0"
edition = "2021"
description = "Make a request to a wasmRS .wasm file."
license = "Apache-2.0"
repository = "https://github.com/nanobus/iota"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
wasmrs = { path = "../../crates/wasmrs", version = "0.1.0" }
wasmrs-codec = { path = "../../crates/wasmrs-codec", version = "0.1.0" }
wasmrs-wasmtime = { path = "../../crates/wasmrs-wasmtime", version = "0.1.0" }
wasmrs-host = { path = "../../crates/wasmrs-host", version = "0.1.0" }
env_logger = { workspace = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
test-log = "0.2.10"
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "env-filter",
  "fmt",
] }
futures = { workspace = true }
anyhow = { version = "1.0" }
clap = { version = "4.0.9", features = ["derive"] }
serde_json = "1.0.85"
