[package]
name = "wasmrs-codec"
version = "0.1.0"
edition = "2021"
description = "MessagePack Codec implementation used by wasmRS iotas"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ['std']
std = ['wasm-msgpack/std', 'serde/std']

[dependencies]
wasm-msgpack = { version = "0.2", default-features = false, features = [
  "alloc",
  "timestamp",
  "i64",
  "u64",
  "bin32",
  "map32",
  "array32",
  "str32",
  "fixext",
  "ext",
  "ext8",
  "ext16",
  "ext32",
  "serde",
  "serde_bytes",
] }
serde = { workspace = true, features = [
  "derive",
  "alloc",
], default-features = false }
