[package]
name = "wasmrs-codec"
version = "0.2.1"
edition = "2021"
description = "MessagePack Codec implementation used by wasmRS iotas"
license = "Apache-2.0"
repository = "https://github.com/nanobus/iota"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]

[dependencies]
wasmrs-frames = { path = "../wasmrs-frames", version = "0.2.1" }
wasm-msgpack = { version = "0.3.2", default-features = false, features = [
  "std",
  "alloc",
  "timestamp",
  "i64",
  "u64",
  "bin32",
  "map32",
  "array32",
  "str32",
  "fixext",
  "ext",
  "custom-error-messages",
  "ext8",
  "ext16",
  "ext32",
  "serde",
  "serde_bytes",
] }
serde = { workspace = true, features = [
  "derive",
  "alloc",
], default-features = false }

[dev-dependencies]
anyhow = { workspace = true }
bytes = { version = "1.1", features = ["serde"] }
serde_json = { version = "1.0" }
