[package]
name = "wasmrs-frames"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bytes = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }

[dev-dependencies]
anyhow = { workspace = true }
