[package]
name = "wasmrs-guest"
version = "0.2.1"
edition = "2021"
license = "Apache-2.0"
description = "wasmRS guest implementation of the RSocket protocol for reactive streams in WebAssembly."
repository = "https://github.com/nanobus/iota"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
wasmrs-runtime = { path = "../wasmrs-runtime", version = "0.2.1" }
wasmrs-rx = { path = "../wasmrs-rx", version = "0.2.1" }
wasmrs-codec = { path = "../wasmrs-codec", version = "0.2.1" }
wasmrs = { path = "../wasmrs", version = "0.2.1" }
bytes = { workspace = true, default-features = false }
futures-executor = { workspace = true, default-features = false, features = [
  "std",
] }
futures-util = { workspace = true, default-features = false, features = [
  "alloc",
] }
serde = { workspace = true, features = [
  "derive",
  "alloc",
], default-features = false }
tracing = { workspace = true, features = ["log", "release_max_level_off"] }
