[package]
name = "wasmrs-host"
version = "0.4.0"
edition = "2021"
license = "Apache-2.0"
description = "wasmRS host implementation for executing and interactin with wasmRS modules."
repository = "https://github.com/nanobus/iota"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
wasmrs-frames = { path = "../wasmrs-frames", version = "0.4.0" }
wasmrs-runtime = { path = "../wasmrs-runtime", version = "0.4.0" }
wasmrs-rx = { path = "../wasmrs-rx", version = "0.4.0" }
wasmrs = { path = "../wasmrs", version = "0.4.0" }
parking_lot = { workspace = true }
thiserror = { workspace = true }
futures-util = { workspace = true }
futures-core = { workspace = true }
tokio = { workspace = true, features = ["sync", "rt"] }
strum = { version = "0.24", features = ["derive"] }
tracing = { workspace = true }
bytes = { workspace = true }
dashmap = "5.4"

[dev-dependencies]
tokio = { workspace = true, features = ["macros"] }
