[package]
name = "wasmrs-rx"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
description = "Base host and client implementations of the wasmRS RSocket protocol."
repository = "https://github.com/nanobus/iota"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
wasmrs-runtime = { path = "../wasmrs-runtime", version = "0.3.0" }
futures = { workspace = true, default-features = false }
bytes = { workspace = true, default-features = false }
parking_lot = { workspace = true, default-features = false }
tracing = { workspace = true, features = ["release_max_level_off"] }
pin-project-lite = "0.2"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
dashmap = "5.4"

[target.'cfg(target_family = "wasm")'.dependencies]
crossbeam-channel = { version = "0.5" }
futures-executor = { workspace = true, default-features = false, features = [
  "std",
] }
futures-util = { workspace = true, default-features = false, features = [
  "alloc",
] }

[dev-dependencies]
anyhow = { version = "1.0" }
tokio = { workspace = true, features = ["rt", "time", "macros"] }
