[package]
name = "wasmrs-wasmtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
profiler = []


[dependencies]
wasmrs-host = { path = "../wasmrs-host" }
wasmrs = { path = "../wasmrs" }

wasmtime = "3.0.1"
wasmtime-wasi = { version = "3.0.1", features = ["sync"] }
wasi-common = { version = "3.0.1" }

tracing = "0.1"
thiserror = "1.0"
cfg-if = "1.0.0"
parking_lot = "0.12"
tokio = { version = "1", features = ["rt", "sync"] }
bytes = "1.2.1"
futures = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
wasmrs-codec = { path = "../wasmrs-codec" }
tokio = { version = "1", features = ["macros"] }
test-log = "0.2.10"
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "env-filter",
  "fmt",
] }
anyhow = { version = "1.0" }
clap = { version = "4.0.9", features = ["derive"] }
serde_json = "1.0.85"
