[package]
name = "wasmrs-wasmtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
profiler = []

[dependencies]
wasmrs-host = { path = "../wasmrs-host" }
wasmrs = { path = "../wasmrs" }
tracing = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync"] }
bytes = { workspace = true }
futures = { workspace = true }
wasmtime = "4.0.0"
wasmtime-wasi = { version = "4.0.0", features = ["sync"] }
wasi-common = { version = "4.0.0" }
cfg-if = "1.0.0"
anyhow = { version = "1.0" }

[dev-dependencies]
env_logger = { workspace = true }
wasmrs-codec = { path = "../wasmrs-codec" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
test-log = "0.2.10"
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "env-filter",
  "fmt",
] }
serde = { workspace = true }
clap = { version = "4.0.9", features = ["derive"] }
serde_json = "1.0.85"
