[package]
name = "grabbag"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
strip = "symbols"
codegen-units = 1
debug = false
lto = true
opt-level = "z"
panic = "abort"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasmrs-guest = { path = "../../crates/wasmrs-guest", features = [
  "record-frames",
  "logging"
] }
serde = { version = "1", features = ["derive"] }
thiserror = "1.0"
async-trait = "0.1"
